tup/parse/testdata/error/output/expressions.tup
# unclosed tuple literal
expecting ")", got "" at row 1, col 10

# unclosed array literal
expecting "]", got "" at row 1, col 13

# binary expression missing right operand
expecting "mul_div expression", got "" at row 1, col 8

# unclosed block
expecting "}", got "" at row 3, col 6

# if expression missing condition
expecting "block", got "" at row 1, col 13

# if expression missing then branch
expecting "block", got "" at row 1, col 12

# chained call missing closing paren
expecting ")", got "" at row 1, col 13
